--- a/Client/package.json
+++ b/Client/package.json
@@ -10,8 +10,7 @@
     "react-dom": "^16.4.1",
     "react-error-boundary-component-fallback2": "^1.0.0",
     "react-scripts": "1.1.4",
-    "react-spinners": "^0.3.2",
-    "react-stomp": "^3.2.0",
+    "react-stomp": "^4.2.0",
     "sockjs-client": "^1.1.5"
   },
   "proxy": {
@@ -24,5 +23,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "create-react-component-folder": "^0.1.30"
   }
 }
